Fix UserStyle metadata block: close CSS comment properly

--- a/youtube-nvim.user.css
+++ b/youtube-nvim.user.css
@@ -8,7 +8,7 @@
 @homepageURL  https://github.com/code-pumpkin/nvim-style-youtube-ui
 @supportURL   https://github.com/code-pumpkin/nvim-style-youtube-ui/issues
 @updateURL    https://raw.githubusercontent.com/code-pumpkin/nvim-style-youtube-ui/main/youtube-nvim.user.css
-==/UserStyle==
+==/UserStyle== */
 
 @-moz-document domain("www.youtube.com") {
 
